# mcman

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api_utils/: api_handler.rs  mod.rs  models.rs  urls.rs
src/installer/: fabric.rs  forge.rs  mod.rs
test/: fabric-versions.rs
