[package]
name = "mcman"
version = "0.1.0"
edition = "2024"

[dependencies]

# TUI Crates
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.29.0"

# API Crates
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"]}
futures-util = "0.3.31"
